# iceberg-spark-sqlserver

./: .env.dev  .env.local  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
iceberg_spark_sqlserver/: main.py
sqlserver-scripts/: mssql-init.sql
